--- a/views/admin/financeiro/search-pagamento.njk
+++ b/views/admin/financeiro/search-pagamento.njk
@@ -172,7 +172,7 @@
                             </div>
                             <div class="boleto__details">
                                 <div class="boleto__details__item">Cliente: {{boleto.clienteNome}}</div>
-                                <div class="boleto__details__item">boleto id: {{boleto.id}}</div>
+                                <div class="boleto__details__item"> CPF: {{boleto.clienteCpf}}</div>
                             </div>
                             <div class="boleto__details">
                                 <div class="boleto__details__item">Vencimento: {{boleto.dataVencimento}}</div>
