--- a/views/admin/gerenciamento/clientes/edit.njk
+++ b/views/admin/gerenciamento/clientes/edit.njk
@@ -107,10 +107,10 @@
                 <input type="text" class="form-control" id="email" name="email" value="{{clienteAcademia.email}}" placeholder="email@email.com" required>
             </div>
 
-            {# <div class="form-field">
-                <label for="senha">Senha</label>
-                <input type="text" class="form-control" id="senha" name="senha" value="{{clienteAcademia.senha}}" placeholder="digite uma senha" required>
-            </div> #}
+            <div class="form-field">
+                <label for="endereco">Endereço</label>
+                <input type="text" class="form-control" id="endereco" name="endereco" value="{{clienteAcademia.endereco}}" placeholder="Rua blabla" required>
+            </div>
 
             <div class="form-field">
                 <label for="sexo">Sexo</label>
