--- a/public/styles/relatorioModel.css
+++ b/public/styles/relatorioModel.css
@@ -1,55 +1,224 @@
-.finance-table{
-    padding: 30px 0;
-}
-.finance-table .finance-head ul{
-    display: grid;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 
-    grid-template-columns: 1fr 1.5fr 1fr 1fr 1fr;
 
-    width: 100%;
-    background-color: whitesmoke;
-
-    color: black;
-    border-top-left-radius: 5px ;
-    border-top-right-radius: 5px;
-}
-.finance-head{
-    border-bottom: 3px #444 solid;
-}
-.finance-head ul li{
-    list-style: none;
-
-    list-style: none;
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*, *::before, *::after {
+    box-sizing: border-box;
+  }
+  /*
+    2. Remove default margin
+  */
+  * {
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+  }
+  ul{
+    margin: 0;
+    padding: 0;
+  }
+  /*
+    3. Allow percentage-based heights in the application
+  */
+  html, body {
+    height: 100%;
     padding: 10px;
+  }
+  /*
+    Typographic tweaks!
+    4. Add accessible line-height
+    5. Improve text rendering
+  */
+  body {
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+  }
+  /*
+    6. Improve media defaults
+  */
+  img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+  }
+  /*
+    7. Remove built-in form typography styles
+  */
+  input, button, textarea, select {
+    font: inherit;
+  }
+  /*
+    8. Avoid text overflows
+  */
+  p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+  }
+  /*
+    9. Create a root stacking context
+  */
+  #root, #__next {
+    isolation: isolate;
+  }
 
-    font-weight: bold;
 
-    font-size: 1.25em;
 
-    /* border-right: 2px solid teal; */
 
-}
-.finance-rows .row ul{
-    display: grid;
 
-    grid-template-columns: 1fr 1.5fr 1fr 1fr 1fr;
-    width: 100%;
-    background-color: whitesmoke;
+        .title{
+            text-align: center;
+            
+        }
 
-    color: black;
-    border-top-left-radius: 5px ;
-    border-top-right-radius: 5px;
-}
-.finance-rows .row ul li{
-    list-style: none;
-    padding: 10px;
+        .finance-table{
+            padding: 10px 0;
+        }
+
+        .finance-table .finance-head ul{
+            display: grid;
+
+            grid-template-columns:  25% 25% 25% 25%;
+
+            width: 100%;
+            background-color: #dc3545;
+
+            color: white;
+            border-top-left-radius: 5px ;
+            border-top-right-radius: 5px;
+
+        }
+       
+        .finance-head ul li{
+            list-style: none;
+
+            list-style: none;
+
+            font-weight: bold;
+
+            font-size: 1.25em;
+            padding: 10px;
+
+
+        }
+
+            .finance-bottom ul li{
+                list-style: none;
+
+                list-style: none;
+
+                font-weight: bold;
+
+                font-size: 1.25em;
+            padding: 10px;
+
+            }
+         
+             .finance-bottom ul{
+            display: grid;
+
+            grid-template-columns:  25% 25% 25% 25%;
+
+            width: 100%;
+            background-color: #dc3545;
+
+            color: white;
+            border-bottom-left-radius: 5px ;
+            border-bottom-right-radius: 5px;
+
+        }
+       
+
+        .finance-rows .row ul li{
+            list-style: none;
+            
+            font-size: 1.125em;
+            
+            padding: 10px;
+            border: 1px solid black;
+            
+        }
+
+        .finance-rows .row ul li .icon{
+            font-size: 1.5em;
+        }
+
+        .row ul {
+        display: grid;
+        grid-template-columns:  25% 25% 25% 25%;
+        width: 100%;
+        background-color: white;
+        color: black;
+    }
+   
+   .apenas-grafico .row{
+            display: none;
+    }
+    h2, h3{
+        margin: 20px 0;
+    }
+    .pagina{
+        width: 209.55mm;
+        height: 298.45mm;
+    }
     
-    font-size: 1.125em;
-    
-/* 
-    border-right: 2px solid teal; */
-}
+    .grafico-segundo{
+        padding-top: 40px;
+    }
 
-.finance-rows .row ul li .icon{
-    font-size: 1.5em;
-}
+
+
+/* ! estilo antigo dos relatorios*/
+    /*
+
+        .apenas-grafico .row{
+            display: none;
+        }
+        .apenas-grafico h2{
+            padding-top: 15px;
+        }
+        .apenas-grafico .grafico-primeiro{
+            min-height: 450px;
+        }
+        .apenas-grafico .grafico-primeiro.n{
+            min-height: 400px;
+        }
+
+
+        
+        .tabela-grafico .grafico-segundo{
+            min-height: 450px;
+        }
+
+        .tabela-grafico .grafico-primeiro.n{
+            min-height: 950px;
+        }
+
+        .tabela-grafico .grafico-primeiro.nDois{
+            margin-top: 10px;
+            min-height: 300px;
+            padding-bottom: 40px;
+        }
+
+        .tabela-grafico .grafico-segundo.nDois{
+            min-height: 300px;
+        }
+
+        
+        .tabela-grafico h2, h3{
+        
+            padding: 15px 0;
+        }
+        .tabela-grafico .saldo-final{
+        margin-top: 0px;
+
+        }
+        
+        .saldo-final{
+        margin-top: 80px;
+        padding: 10px 0;
+        }
+        .saldo-final.tabela{
+            margin: 0;
+            padding: 0;
+        }
+
+    */
