--- a/views/admin/agendamento/criar-novo.njk
+++ b/views/admin/agendamento/criar-novo.njk
@@ -100,7 +100,7 @@
 
 
         <div class="form-wrapper">
-            <form action="/criar/novo-agendamento" method="POST">
+            <form action="/dashboard/criar/novo-agendamento" method="POST">
           
                 <div class="input-wrapper">
                     <label for="cliente">Cliente</label>
