--- a/views/admin/dashboard.njk
+++ b/views/admin/dashboard.njk
@@ -61,16 +61,9 @@
         {%endblock%}
 
         {%block content%}
-            <h1>Pagina principal</h1>
+            <h1>Bem vindo a o Dashboard de Administrador do Acadmin</h1>
 
-             {% for mensagem in msg%}
-
-                <div class="alert-box sucesso">
-                    <p>{{mensagem}}</p>
-                    <button class="close-alert"><ion-icon name="close"></ion-icon></button>
-                </div>
-
-            {% endfor %}
+             <h2>Video explicando como funciona o sistema:</h2>
         {%endblock%}
 
 {% block scripts %}
