--- a/views/template/layout.njk
+++ b/views/template/layout.njk
@@ -14,6 +14,13 @@
     
     </head>
     <body>
+         <form action="/logout" method="post" id="logout">
+            <!-- Adicione o formulário em volta do último item -->
+            <button type="submit">
+                <span class="icon"><ion-icon name="arrow-forward-circle-outline"></ion-icon></span>
+                <span class="title">Sair</span>
+            </button>
+        </form>
        {%block menu%}
        {%endblock%}
 
