--- a/views/admin/dashboard.njk
+++ b/views/admin/dashboard.njk
@@ -49,7 +49,7 @@
                             </a>
                         </li>
                         <li class="list">
-                            <a href="/login">
+                            <a href="#">
                                 <span class="icon"><ion-icon name="arrow-forward-circle-outline"></ion-icon></span>
                                 <span class="title">Sair</span>
                             </a>
@@ -63,7 +63,7 @@
         {%block content%}
             <h1>Bem vindo a o Dashboard de Administrador do Acadmin</h1>
 
-             <h2>Video explicando como funciona o sistema:</h2>
+             
         {%endblock%}
 
 {% block scripts %}
