--- a/views/atendente/agendamento/agendamento.njk
+++ b/views/atendente/agendamento/agendamento.njk
@@ -45,7 +45,7 @@
                     </a>
                 </li>
                 <li class="list">
-                    <a href="/login">
+                    <a href="#">
                         <span class="icon"><ion-icon name="arrow-forward-circle-outline"></ion-icon></span>
                         <span class="title">Sair</span>
                     </a>
@@ -65,7 +65,7 @@
                
 
                 <form class="search-form" role="search" method="POST" action="/acadmin/agendamento/search">
-                <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                    <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
                 </form>
                 
                 <a href="/acadmin/agendamento/criar/search/cliente" class="add">+ Agendamento</a>
