--- a/views/portal/portal.njk
+++ b/views/portal/portal.njk
@@ -32,7 +32,7 @@
                 </a>
             </li>
             <li class="list">
-                <a href="/login">
+                <a href="#">
                     <span class="icon"><ion-icon name="arrow-forward-circle-outline"></ion-icon></span>
                     <span class="title">Sair</span>
                 </a>
@@ -46,8 +46,6 @@
 
 
 {%block content%}
-        <h1>Bem vindo </h1>
-
-        
+        <h1>Bem vindo ao acadmin, Você esta no Portal do Cliente.</h1>
         
 {%endblock%}
