--- a/views/admin/cadastro/cliente.njk
+++ b/views/admin/cadastro/cliente.njk
@@ -51,7 +51,7 @@
                             </a>
                         </li>
                         <li class="list">
-                            <a href="/login">
+                            <a href="#">
                                 <span class="icon"><ion-icon name="arrow-forward-circle-outline"></ion-icon></span>
                                 <span class="title">Sair</span>
                             </a>
