--- a/views/atendente/agendamento/edit.njk
+++ b/views/atendente/agendamento/edit.njk
@@ -47,7 +47,7 @@
                     </a>
                 </li>
                 <li class="list">
-                    <a href="/login">
+                    <a href="#">
                         <span class="icon"><ion-icon name="arrow-forward-circle-outline"></ion-icon></span>
                         <span class="title">Sair</span>
                     </a>
