--- a/views/atendente/financeiro/historico.njk
+++ b/views/atendente/financeiro/historico.njk
@@ -48,7 +48,7 @@
                     </a>
                 </li>
                 <li class="list">
-                    <a href="/login">
+                    <a href="#">
                         <span class="icon"><ion-icon name="arrow-forward-circle-outline"></ion-icon></span>
                         <span class="title">Sair</span>
                     </a>
