--- a/views/portal/agendamento/user-agendamento.njk
+++ b/views/portal/agendamento/user-agendamento.njk
@@ -33,7 +33,7 @@
                 </a>
             </li>
             <li class="list">
-                <a href="/login">
+                <a href="#">
                     <span class="icon"><ion-icon name="arrow-forward-circle-outline"></ion-icon></span>
                     <span class="title">Sair</span>
                 </a>
@@ -72,6 +72,14 @@
                 </div>
 
             {% endfor %}
+            {% for mensagem in msgErro %}
+
+                <div class="alert-box deleted">
+                    <p>{{mensagem}}</p>
+                    <button class="close-alert"><ion-icon name="close"></ion-icon></button>
+                </div>
+
+            {% endfor %}
 
          <div class="table-head agendamento">
             <ul>
@@ -85,37 +93,45 @@
             </ul>
         </div>
 
-        <div class="table">
+        {% if agendamentos.length > 0 %}
+        
+            <div class="table">
 
-            {% for agendamento in agendamentos%}
+                {% for agendamento in agendamentos%}
 
-                <div class="row agendamento">
-                <ul>
-                    <li>{{agendamento.clienteNome}} </li>
-                    <li>{{agendamento.modalidade}} </li>
-                    <li>{{agendamento.instrutorNome}}</li>
-                    <li>{{agendamento.dia}} </li>
-                    <li>{{agendamento.horarioComeca}}</li>
-                    <li>{{agendamento.horarioTermina}}</li>
+                    <div class="row agendamento">
+                    <ul>
+                        <li>{{agendamento.clienteNome}} </li>
+                        <li>{{agendamento.modalidade}} </li>
+                        <li>{{agendamento.instrutorNome}}</li>
+                        <li>{{agendamento.dia}} </li>
+                        <li>{{agendamento.horarioComeca}}</li>
+                        <li>{{agendamento.horarioTermina}}</li>
 
-                    <li class="actions">
-                        <a href="/portal/agendamento/ver/{{agendamento._id}}" class="ver act-btn"><ion-icon class="icon" name="eye-outline"></ion-icon> ver</a>
+                        <li class="actions">
+                            <a href="/portal/agendamento/ver/{{agendamento._id}}" class="ver act-btn"><ion-icon class="icon" name="eye-outline"></ion-icon> ver</a>
 
-                        <a class="editar act-btn" href="/portal/agendamento/edit/{{agendamento._id}}"><ion-icon class="icon"  name="pencil-outline"></ion-icon> Editar</a>
+                            <a class="editar act-btn" href="/portal/agendamento/edit/{{agendamento._id}}"><ion-icon class="icon"  name="pencil-outline"></ion-icon> Editar</a>
 
-                        
-                        
-                    <form action="/portal/agendamento/edit/{{agendamento._id}}?_method=DELETE" method="POST" class="position-relative">
-                        
-                        <button class="deletar act-btn" type="submit" class="btn btn-primary"><ion-icon class="icon" name="trash-outline"></ion-icon> Deletar </button>
-                    </form>
-                    </li>
+                            
+                            
+                        <form action="/portal/agendamento/edit/{{agendamento._id}}?_method=DELETE" method="POST" class="position-relative">
+                            
+                            <button class="deletar act-btn" type="submit" class="btn btn-primary"><ion-icon class="icon" name="trash-outline"></ion-icon> Deletar </button>
+                        </form>
+                        </li>
 
-                </ul>
+                    </ul>
+                </div>
+
+                {% endfor %}
             </div>
-
-            {% endfor %}
-        </div>
+            {%else%}
+            <div class="not-found agendamento">
+                    <h2>Você não tem nenhum agendamento</h2>
+                    <h3>Voce pode Criar um novo agendamento em <a class="add" href="/portal/agendamento/criar/novo/">Novo Agendamento</a></h3>
+            </div>
+        {% endif %}
 {%endblock%}
 
 {%block scripts%}
