--- a/views/admin/agendamento/search-agendamento.njk
+++ b/views/admin/agendamento/search-agendamento.njk
@@ -70,6 +70,9 @@
 
                 <form class="search-form" role="search" method="POST" action="/dashboard/agendamento/search">
                 <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                    <button type="submit" class="searchButton">
+                        <ion-icon name="search-outline"></ion-icon>
+                    </button>
                 </form>
 
                 <a href="/dashboard/agendamento/criar/search" class="add">+ Agendamento</a>
