--- a/views/admin/financeiro/pagamentos.njk
+++ b/views/admin/financeiro/pagamentos.njk
@@ -82,7 +82,10 @@
                 
 
                     <form class="search-form" role="search" method="POST" action="/dashboard/financeiro/pagamentos/search" >
-                    <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                        <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                        <button type="submit" class="searchButton">
+                            <ion-icon name="search-outline"></ion-icon>
+                        </button>
                     </form>
                     
                     <div class="filtro-contaienr">
