--- a/views/admin/gerenciamento/clientes/search.njk
+++ b/views/admin/gerenciamento/clientes/search.njk
@@ -77,6 +77,9 @@
 
                 <form class="search-form" role="search" method="POST" action="/dashboard/gerenciamento/clientes/search">
                 <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                    <button type="submit" class="searchButton">
+                        <ion-icon name="search-outline"></ion-icon>
+                    </button>
                 </form>
 
                 <div class="filtro-contaienr">
