--- a/views/atendente/gerenciamento/clientes/clientes.njk
+++ b/views/atendente/gerenciamento/clientes/clientes.njk
@@ -65,6 +65,9 @@
                 <h1>Clientes</h1>
                 <form class="search-form" role="search" method="POST" action="/acadmin/gerenciamento/clientes/search">
                 <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                    <button type="submit" class="searchButton">
+                        <ion-icon name="search-outline"></ion-icon>
+                    </button>
                 </form>
 
                 <div class="filtro-contaienr">
