--- a/views/portal/agendamento/user-agendamento.njk
+++ b/views/portal/agendamento/user-agendamento.njk
@@ -52,14 +52,14 @@
             <h1 class='title'>Agendamentos</h1>
             <div class="title table-nav">
 
-               {# ! user id <a href="/portal/agendamento/criar/novo/{{cliente.id}}" class="add start">Novo Agendamento</a> #}
+             
                <a href="/portal/agendamento/criar/novo/" class="add start">Novo Agendamento</a>
 
-                <form class="search-form" role="search" method="POST" action="/acadmin/agendamento/search">
-                <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
-                </form>
+                <div>
+
+                </div>
                 
-                {# ! user id <a href="/portal/agendamento/historico/:id" class="add historico">Historico de Agendamentos</a> #}
+               
                 <a href="/portal/agendamento/historico/" class="add historico">Historico de Agendamentos</a>
                 
             </div>
