--- a/views/admin/agendamento/agendamento.njk
+++ b/views/admin/agendamento/agendamento.njk
@@ -70,7 +70,10 @@
                
 
                 <form class="search-form" role="search" method="POST" action="/dashboard/agendamento/search">
-                <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                    <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                    <button type="submit" class="searchButton">
+                        <ion-icon name="search-outline"></ion-icon>
+                    </button>
                 </form>
                 
 
