--- a/views/admin/agendamento/search-cliente.njk
+++ b/views/admin/agendamento/search-cliente.njk
@@ -89,6 +89,9 @@
 
                 <form class="search-form" role="search" method="POST" action="/dashboard/agendamento/criar/search">
                 <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                    <button type="submit" class="searchButton">
+                        <ion-icon name="search-outline"></ion-icon>
+                    </button>
                 </form>
             </div>
     
