--- a/views/admin/gerenciamento/clientes/clientes.njk
+++ b/views/admin/gerenciamento/clientes/clientes.njk
@@ -76,7 +76,11 @@
                 <h1>Clientes</h1>
 
                 <form class="search-form" role="search" method="POST" action="/dashboard/gerenciamento/clientes/search">
-                <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                    <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                    <button type="submit" class="searchButton">
+                        <ion-icon name="search-outline"></ion-icon>
+                    </button>
+                   
                 </form>
 
                 <div class="filtro-contaienr">
