--- a/views/atendente/agendamento/search-agendamento.njk
+++ b/views/atendente/agendamento/search-agendamento.njk
@@ -65,6 +65,9 @@
 
                 <form class="search-form" role="search" method="POST" action="/acadmin/agendamento/search">
                 <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                    <button type="submit" class="searchButton">
+                        <ion-icon name="search-outline"></ion-icon>
+                    </button>
                 </form>
 
                 <a href="/acadmin/agendamento/criar/search/cliente" class="add">+ Agendamento</a>
