--- a/views/atendente/agendamento/search-cliente.njk
+++ b/views/atendente/agendamento/search-cliente.njk
@@ -86,6 +86,9 @@
 
                 <form class="search-form" role="search" method="POST" action="/acadmin/criar/search/cliente">
                 <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                    <button type="submit" class="searchButton">
+                        <ion-icon name="search-outline"></ion-icon>
+                    </button>
                 </form>
             </div>
     
