--- a/views/atendente/financeiro/pagamentos.njk
+++ b/views/atendente/financeiro/pagamentos.njk
@@ -71,6 +71,9 @@
 
                     <form class="search-form" role="search" method="POST" action="/acadmin/financeiro/pagamentos/search" >
                     <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                    <button type="submit" class="searchButton">
+                        <ion-icon name="search-outline"></ion-icon>
+                    </button>
                     </form>
                     
                     <div class="filtro-contaienr">
