--- a/views/atendente/financeiro/search-cliente.njk
+++ b/views/atendente/financeiro/search-cliente.njk
@@ -77,6 +77,9 @@
 
                 <form class="search-form" role="search" method="POST" action="/acadmin/financeiro/criar/search">
                 <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                    <button type="submit" class="searchButton">
+                        <ion-icon name="search-outline"></ion-icon>
+                    </button>
                 </form>
             </div>
 
